--- a/package.json
+++ b/package.json
@@ -8,6 +8,20 @@
   "type": "module",
   "source": "src/index.ts",
   "types": "dist/types/index.d.ts",
+  "keywords": [
+    "csv",
+    "importer",
+    "import",
+    "convert",
+    "json",
+    "react",
+    "upload",
+    "preview",
+    "parse",
+    "parser",
+    "csv-parse",
+    "typescript"
+  ],
   "scripts": {
     "dev": "vite",
     "build:peer": "tsc -b && vite build --mode peer",
