Add lint and format_check step to CI (#116)
* Add lint and format_check step to CI

* Breakdown into separate workflows

* Improve names and triggers

* Fix linter

* Ignore warnings

* Remove rulke disabling

* Fix warnings

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "prepublishOnly": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/dist",
-    "postpublish": "npm run deploy"
+    "postpublish": "npm run deploy",
+    "lint": "eslint --max-warnings=0 \"src/**/*.{ts,tsx}\"",
+    "format_check": "prettier --check \"src/**/*.tsx\" \"src/**/*.ts\""
   },
   "exports": {
     "./peer": {
