--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "import/no-named-as-default": "off",
     "@typescript-eslint/no-shadow": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "no-extra-boolean-cast": "off",
     "@typescript-eslint/no-use-before-define": [
       "error",
