--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,10 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": [
-      "./tsconfig.json",
-      "./example-preact/tsconfig.json"
-    ],
+    "project": ["./tsconfig.json"],
     "ecmaVersion": 2020,
-    "sourceType": "module"
+    "sourceType": "module",
+    "jsx": "react-jsx",
   },
   "extends": [
     "eslint:recommended",
@@ -18,14 +16,14 @@
     "plugin:import/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
   ],
   "plugins": [
     "react",
     "react-hooks",
     "@typescript-eslint",
     "prettier",
-    "import"
+    "import",
   ],
   "rules": {
     "prettier/prettier": "error",
@@ -44,38 +42,30 @@
       "error",
       {
         "functions": false,
-        "classes": false
-      }
+        "classes": false,
+      },
     ],
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
-        "argsIgnorePattern": "^_"
-      }
-    ]
+        "argsIgnorePattern": "^_",
+      },
+    ],
   },
   "settings": {
     "react": {
-      "version": "detect"
+      "version": "detect",
     },
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+      "@typescript-eslint/parser": [".ts", ".tsx"],
     },
     "import/resolver": {
       "typescript": {
-        "alwaysTryTypes": true
+        "alwaysTryTypes": true,
       },
       "node": {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
-      }
-    }
-  }
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+      },
+    },
+  },
 }
