--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "paths": {
-      "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"]
-    },
+    "paths": {},
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -18,7 +15,6 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "dist",
