--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "watch": "npm run watch:react",
     "test": "vitest",
     "preview": "vite preview",
-    "prepare": "tsc --emitDeclarationOnly",
+    "prepare": "pnpm run build",
     "prepublishOnly": "npm run build",
     "predeploy": "cd example-preact && npm install && npm run build",
     "deploy": "gh-pages -d example-preact/dist",
