--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "./react/index.css": "./dist/react/hello-csv.css"
   },
   "peerDependencies": {
-    "react": "^18 || ^19",
-    "react-dom": "^18 || ^19"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -65,8 +65,8 @@
     "@tailwindcss/vite": "^4.0.4",
     "@types/dropzone": "^5.7.9",
     "@types/papaparse": "5.3.15",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
     "@vitejs/plugin-react": "^4.4.1",
@@ -87,7 +87,9 @@
     "typescript": "~5.7.2",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "files": [
     "dist"
