--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "./react/index.css": "./dist/react/hello-csv.css"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -88,8 +88,8 @@
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.0",
     "vitest": "^3.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "files": [
     "dist"
