--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-csv",
+  "name": "@victory-waves/hello-csv",
   "version": "0.3.1",
   "description": "A modern CSV importer written in Preact",
   "author": "HelloCSV",
